ALB/modules/loadbalancer/sg.tf
## Security Group for ALB
resource "aws_security_group" "lb_sg" {
    name = "${var.env}-lb-sg"
    vpc_id = var.vpc_id

    ingress {
    description      = "Allow HTTP from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    ingress {
    description      = "Allow HTTPS from anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1" 
    cidr_blocks      = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.env}-lb-sg"
    }
}
